--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "node-sass": "^4.13.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-helmet": "^5.2.0",
     "react-slick": "^0.25.2",
     "request": "^2.88.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.1"
   },
   "keywords": [
     "gatsby"
