--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
     "@material-ui/core": "^4.12.3",
     "classnames": "^2.3.1",
     "dotenv": "^8.1.0",
-    "gatsby": "^2.24.81",
-    "gatsby-image": "^2.4.21",
+    "gatsby": "^4.1.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sass": "^2.3.18",
-    "gatsby-source-datocms": "^2.2.4",
-    "gatsby-source-filesystem": "^2.3.35",
-    "gatsby-transformer-remark": "^2.8.43",
-    "node-sass": "^4.13.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "gatsby-plugin-sass": "^5.1.0",
+    "gatsby-source-datocms": "^3.0.6",
+    "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-transformer-remark": "^5.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.5",
-    "react-helmet": "^5.2.0",
-    "react-slick": "^0.25.2",
+    "react-helmet": "^6.1.0",
+    "react-slick": "^0.28.1",
     "request": "^2.88.2",
+    "sass": "^1.43.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1"
   },
