--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "gatsby-source-datocms": "^3.0.6",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-remark": "^5.1.0",
+    "install": "^0.13.0",
+    "npm": "^8.12.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.5",
     "react-helmet": "^6.1.0",
+    "react-simple-captcha": "^9.0.0",
     "react-slick": "^0.28.1",
     "request": "^2.88.2",
     "sass": "^1.43.4",
